--- a/_data/2021/chengchi/location.yml
+++ b/_data/2021/chengchi/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/chengchi.jpg
-title: Chengchi University, Taiwan
+title: National Chengchi University, Taipei, Taiwan
 subtitle: Virtual event
-description: "June 28 to July 9, 2021"
+description: "June 28 to July 2, 2021"
 link: chengchi
 year: 2021
