--- a/_data/2021/howard-mathematica/hero.yml
+++ b/_data/2021/howard-mathematica/hero.yml
@@ -1,2 +1,2 @@
 header_2: "June 14 to June 25, 2021 | Howard University | Virtual event"
-location: "SICSS-Howard/Mathematica *Coming Soon*"
+location: "SICSS-Howard/Mathematica"
