--- a/_data/2021/howard-mathematica/location.yml
+++ b/_data/2021/howard-mathematica/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/howard.jpg
-title: Howard/Mathematica *Coming Soon*
+title: Howard/Mathematica 
 subtitle: Virtual event
 description: "June 14 to June 25, 2021"
 link: howard-mathematica
