--- a/_data/2021/beijing/faculty.yml
+++ b/_data/2021/beijing/faculty.yml
@@ -1,1 +1,16 @@
-- name: 
+- name: Yan Leng
+  image: /assets/images/yanLeng_new.jpeg
+  bio: "Yan Leng is an assistant professor in the McCombs School of Business, the University of Texas at Austin. She graduated from MIT Media Lab in May, 2020. She holds master degrees in Computer Science and Transportation Engineering, both from MIT. Yan is a network scientist working on social science problems. Her research lies in the intersection of machine learning, network theory, and causal inference. She uses large-scale behavioral data to understand collective human behavior over social networks and builds computational techniques for solving societal and organizational issues."
+  website: http://web.mit.edu/yleng/www/
+
+
+- name: Tian Yang
+  image: /assets/images/tianYang.png	
+  bio: "Tian Yang is a PhD Candidate at the Annenberg School for Communication at the University of Pennsylvania. He is interested in applying methods in computational social science to study political communication across the globe, especially in China and the US. Particularly, he looks at how today’s high-choice media environment influences the public’s information behaviors. His research employs various approaches, including network analysis, online experiments, natural experiments, etc."
+  website: https://www.asc.upenn.edu/people/students/tian-yang
+
+
+- name: Yuan Yuan
+  image: /assets/images/yuanYuan.jpg	
+  bio: "Yuan Yuan is a PhD Candidate in the Institute for Data, Systems, and Society (IDSS) at Massachusetts Institute of Technology. He researches social and economic networks by applying cutting-edge computational methods, including machine learning, causal inference, and experimental design, to large-scale network data. He is especially interested in how social ties are formed and stabilized, and how social ties mediate social contagion, social exchange, prosocial behavior, and information diffusion. Yuan’s thesis advisor is Prof. Sandy Pentland. Yuan considers himself as a computational social scientist who cares a lot about research methodology."
+  website: https://www.mit.edu/~yuan2/
