--- a/_data/2021/beijing/location.yml
+++ b/_data/2021/beijing/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/beijing.jpg
-title: Beijing *Coming Soon*
+title: Beijing 
 subtitle: Virtual event
 description: "June 14 to June 25, 2021"
 link: beijing
