Updates location for ethzurich

--- a/_data/2021/ethzurich/location.yml
+++ b/_data/2021/ethzurich/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/zurich.jpg
-title: Zürich *Coming Soon*
+title: Zürich
 subtitle: Virtual event
 description: "June 14 to June 18, 2021"
 link: ethzurich
