--- a/_data/2021/bologna/faculty.yml
+++ b/_data/2021/bologna/faculty.yml
@@ -1,6 +1,10 @@
 - name: Filippo Andreatta
   bio: "Filippo Andreatta teaches International Politics and Strategic Studies at the University of Bologna, where he is currently chair of the Department of Political and Social Science."
   website: https://www.unibo.it/sitoweb/filippo.andreatta2/en
+  
+- name: Giampiero Giacomello
+  bio: "Associate Professor of Political Science. His research interests include strategic theory (mostly Clausewitz), cybersecurity and wargaming and simulation. He has extensively published on all of these topics."
+  website: https://www.unibo.it/sitoweb/giampiero.giacomello/en
 
 - name: Marco Albertini
   bio: "Marco Albertini is Full Professor at the University of Bologna. His research interests focus on intergenerational relations; the consequences of separation and divorce; the comparative study of income inequality and social stratification; the consequences of childlessness; long-term care policies and ageing."
