--- a/_data/2021/bologna/faculty.yml
+++ b/_data/2021/bologna/faculty.yml
@@ -3,7 +3,7 @@
   website: https://www.unibo.it/sitoweb/filippo.andreatta2/en
   
 - name: Giampiero Giacomello
-  bio: "Associate Professor of Political Science. His research interests include strategic theory (mostly Clausewitz), cybersecurity and wargaming and simulation. He has extensively published on all of these topics."
+  bio: "Giampiero Giacomello is Associate Professor of Political Science. His research interests include strategic theory (mostly Clausewitz), cybersecurity and wargaming and simulation. He has extensively published on all of these topics."
   website: https://www.unibo.it/sitoweb/giampiero.giacomello/en
 
 - name: Marco Albertini
