--- a/_data/2021/london/teaching_assistants.yml
+++ b/_data/2021/london/teaching_assistants.yml
@@ -1,3 +1,3 @@
 - name: Sam Dupret
-  image: /assets/images/SamDupret.jpeg
+  image: /assets/images/SamDupret.jpg
   bio: "Sam is a cognitive science student, currently working as a research assistant at the UCL School of Management. Sam is passionate about good and impactful science, even more so if involves multiplayer experiments!"
