--- a/_data/2021/fgv-dapp-brazil/faculty.yml
+++ b/_data/2021/fgv-dapp-brazil/faculty.yml
@@ -5,11 +5,11 @@
 
 - name: Amaro Grassi
   image: /assets/images/amarograssi.jpg
-  bio: "Amaro Grassi is a Ph.D. Candidate in Political Science at IESP-UERJ, and Chief Researcher at The Department of Public Policy Analysis of Getulio Vargas Foundation (FGV/DAPP))"
+  bio: "Amaro Grassi is a Ph.D. Candidate in Political Science at IESP-UERJ, and Chief Researcher at The Department of Public Policy Analysis of Getulio Vargas Foundation (FGV/DAPP)"
   website: http://dapp.fgv.br/perfil/amaro-grassi/
   
 - name: Marco Aurélio Ruediger
   image: /assets/images/marcoruediger.jpg
-  bio: "Marco Ruediger is the Faculty Sponsor of SICSS FGV-DAPP Brazil, and the Director of The Department of Public Policy Analysis of Getulio Vargas Foundation (FGV/DAPP))"
+  bio: "Marco Ruediger is the Faculty Sponsor of SICSS FGV-DAPP Brazil, and the Director of The Department of Public Policy Analysis of Getulio Vargas Foundation (FGV/DAPP)"
   website: 
   
