--- a/_data/2021/fgv-dapp-brazil/faculty.yml
+++ b/_data/2021/fgv-dapp-brazil/faculty.yml
@@ -13,7 +13,7 @@
   bio: "Amaro Grassi is a Ph.D. Candidate in Political Science at IESP-UERJ, and Chief Researcher at The Department of Public Policy Analysis of Getulio Vargas Foundation (FGV/DAPP)"
   website: 
   
-- name: Amaro Grassi
+- name: Danilo Carvalho
   image: /assets/images/danilo.jpeg
   bio: "Danilo Carvalho is a Master student in Informatics at the Federal University of Rio de Janeiro (Brazil) and coordinator of Data Science at the Department of Public Policy Analysis of Getulio Vargas Foundation (Brazil). He works with the monitoring of online public debate, automated behavior detection, information spreading, and machine learning in applied social sciences."
   website: 
