--- a/_data/2021/lisbon/location.yml
+++ b/_data/2021/lisbon/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/lisbon.jpg
-title: Lisbon *Coming Soon*
+title: Lisbon
 subtitle: Virtual event
 description: "June 14 to June 25, 2021"
 link: lisbon
