--- a/_data/2021/lisbon/hero.yml
+++ b/_data/2021/lisbon/hero.yml
@@ -1,2 +1,2 @@
 header_2: "June 14 to June 25, 2021 | Nova School of Business and Economics | Virtual event"
-location: "SICSS-Lisbon *Coming Soon*"
+location: "SICSS-Lisbon"
