--- a/_data/2021/howard-mathematica/sidebar.yml
+++ b/_data/2021/howard-mathematica/sidebar.yml
@@ -1,8 +1,11 @@
 - name: Apply
   url: "apply"
+- name: SICSS-Howard/Mathematica Vision
+  url: "sicss-howard-mathematica-vision"
 - name: Pre-arrival
   url: "pre_arrival"
 - name: People
   url: "people"
 - name: Schedule & Materials
   url: "schedule"
+ 
