--- a/_data/2021/los_angeles/hero.yml
+++ b/_data/2021/los_angeles/hero.yml
@@ -1,2 +1,2 @@
-header_2: "September 7 to September 22, 2021 | University of California, Los Angeles | Virtual event"
-location: "SICSS-UCLA *Coming Soon*"
+header_2: "June 21 to July 2, 2021 | University of California, Los Angeles | Virtual event"
+location: "SICSS-UCLA"
