--- a/_data/2021/los_angeles/location.yml
+++ b/_data/2021/los_angeles/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/los_angeles.jpg
-title: UCLA *Coming Soon*
+title: UCLA
 subtitle: Virtual event
-description: "September 7 to September 22, 2021"
+description: "June 21 to July 2, 2021"
 link: los_angeles
 year: 2021
