--- a/_data/2021/chicago/location.yml
+++ b/_data/2021/chicago/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/chicago.jpg
-title: Chicago *Coming Soon*
+title: Chicago 
 subtitle: Virtual event
 description: "June 14 to June 25, 2021"
 link: chicago
