--- a/_data/2021/chicago/hero.yml
+++ b/_data/2021/chicago/hero.yml
@@ -1,2 +1,2 @@
 header_2: "June 14 to June 25, 2021 | Northwestern University | Virtual event"
-location: "SICSS-Chicago *Coming Soon*"
+location: "SICSS-Chicago"
