--- a/_data/2021/chicago/faculty.yml
+++ b/_data/2021/chicago/faculty.yml
@@ -8,5 +8,5 @@
   bio: "Carrie Stallings is a doctoral student at Northwestern University and a Native and Indigenous Studies fellow.  Her research interests include inequality, race & ethnicity, and computational and decolonial methodologies. Her current research focuses on inequality, particularly on the roles that government and educational institutions play in the life outcomes of Black and Indigenous peoples. 
 
 - name: Yian Yin
-  image:
+  image: /assets/images/YianYin.jpeg
   bio: "Yian Yin is a Ph.D. candidate of Industrial Engineering & Management Sciences at Northwestern University. He also holds affiliations with Northwestern Institute on Complex Systems and Center for Science of Science and Innovation. Yian studies computational social science, with a particular focus on integrating theoretical insights in innovation studies, computational tools in data science, and modeling frameworks in complex systems to examine various fundamental elements of innovation lifecycles. His research has been published in multidisciplinary journals including Science, Nature, Nature Human Behaviour, and Nature Reviews Physics. Yian is also a 2018 SICSS alum."
