--- a/_data/2021/chicago/faculty.yml
+++ b/_data/2021/chicago/faculty.yml
@@ -3,9 +3,10 @@
   bio: "Kat Albrecht is a JD/PhD Candidate in Sociology at Northwestern University, a Law and Science Fellow at the Northwestern Pritzker School of Law, and a Global Impacts Fellow at the Buffett Institute. Kat’s work sits at the intersection of computational social science and law, where she uses innovative computational techniques to study fear, violence, and data surveillance. Her work has been published in outlets like Law & Policy, Nature Human Behavior, and Law, Technology & Humans. This is her 4th year organizing SICSS Chicago and she is 2017 SICSS Alum." 
   website: https://www.katalbrecht.org
   
+
 - name: Carrie Stallings
   image: /assets/images/CarrieStallings.jpg
-  bio: "Carrie Stallings is a doctoral student at Northwestern University and a Native and Indigenous Studies fellow.  Her research interests include inequality, race & ethnicity, and computational and decolonial methodologies. Her current research focuses on inequality, particularly on the roles that government and educational institutions play in the life outcomes of Black and Indigenous peoples. 
+  bio: "Carrie Stallings is a doctoral student at Northwestern University and a Native and Indigenous Studies fellow.  Her research interests include inequality, race & ethnicity, and computational and decolonial methodologies. Her current research focuses on inequality, particularly on the roles that government and educational institutions play in the life outcomes of Black and Indigenous peoples."
 
 - name: Yian Yin
   image: /assets/images/YianYin.jpeg
