--- a/_data/2021/law/location.yml
+++ b/_data/2021/law/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/maastricht.jpg
-title: Law *Coming Soon*
+title: Law
 subtitle: Virtual event
 description: "June 14 to June 25, 2021"
 link: law
