--- a/_data/2021/istanbul/people.yml
+++ b/_data/2021/istanbul/people.yml
@@ -11,14 +11,16 @@ organizers:
        image: /assets/images/YEmreTapan.JPG
        bio: "Yunus Emre Tapan is a Ph.D. candidate in International Relations at Kadir Has University. He has a Master's degree in Middle East Studies from Middle Eastern Technical University and a Bachelor's degree in Economics from Bogazici University. His research sits at the intersection of data science and social sciences. He specializes in social network analysis and computational text analysis to study online extremist communities and non-state actors with a particular focus on how they radicalize. He is a graduate of ICPSR (Inter-university Consortium for Political and Social Research) Summer Program in 2020 as one of the recipients of the Scholarship for Political Science Research. He presented his works at IC2S2(International Conference on Computational Social Science), PaCSS & PolNet (Politics and Computational Social Science and Political Networks Conference), and ECPR (European Consortium for Political Research). He took multiple roles in the international conferences and workshops conducted by NATO, the U.N., and the Ministry of Foreign Affairs in Turkey as a rapporteur, a focal point, an invited participant, and a discussant."
        website:
-
-teaching assistants:
-  title: Data Science Expert
-  people:
-    - name: Ahmet Kurnaz
+     
+     - name: Ahmet Kurnaz
       image: /2019/istanbul/images/Ahmet_Kurnaz.png
       bio: "Ahmet is a PhD candidate at Çanakkale 18 Mart University’s Department of Political Science. Ahmet comes from a computer science background and has advanced knowledge of R. He works on polarisation and political communication online and specialises in text mining and analysis. He was a visiting researcher at the Oxford Internet Institute in 2017 and 2018, and the University of Maryland, College Park in 2015. He was a teaching assistant of SICSS-Istanbul in 2019."
       website: 
+
+teaching assistants:
+  title: Teaching Assistants
+  people:
+
   
 
 localspeakers:
