--- a/_data/2021/los_angeles/location.yml
+++ b/_data/2021/los_angeles/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/los_angeles.jpg
-title: UCLA
+title: Los Angeles
 subtitle: Virtual event
 description: "June 21 to July 2, 2021"
 link: los_angeles
