--- a/_data/2021/istanbul/people.yml
+++ b/_data/2021/istanbul/people.yml
@@ -20,8 +20,10 @@ organizers:
 teaching assistants:
   title: Teaching Assistants
   people:
-
-  
+    - name: 
+      image: 
+      bio: 
+      website:
 
 localspeakers:
   title: Local Speakers
@@ -34,7 +36,6 @@ localspeakers:
 participants:
   title: Participants
   people:
-
     - name: 
       image: 
       bio: 
