--- a/_data/2021/istanbul/people.yml
+++ b/_data/2021/istanbul/people.yml
@@ -1,5 +1,5 @@
 organizers:
-  title: Organization
+  title: Faculty
   people:
      - name: Akın Ünver
        image: /2019/istanbul/images/akin_unver.jpg
