Add Emily Cantrell bio

--- a/_data/2021/princeton/teaching_assistants.yml
+++ b/_data/2021/princeton/teaching_assistants.yml
@@ -1,1 +1,4 @@
-- name:
+- name: Emily Cantrell
+  image: /assets/images/EmilyCantrell.jpeg
+  bio: "Emily Cantrell is a doctoral student in Sociology and Social Policy at Princeton University. She received her bachelor’s degree from Denison University in 2017, where she designed her own major in Human Development and Social Policy with a focus on socioeconomic inequality in the United States. Prior to beginning her graduate work, Emily worked at Child Trends, a research organization that evaluates programs and policies to improve the lives of children and families. Her current projects include a collaboration to assess the predictability of life trajectories using thousands of machine learning strategies, building on findings from the [Fragile Families Challenge](https://www.fragilefamilieschallenge.org/)."
+  website: https://www.linkedin.com/in/emily-cantrell/ 
