--- a/_data/2021/princeton/faculty.yml
+++ b/_data/2021/princeton/faculty.yml
@@ -1,6 +1,6 @@
 - name: Matthew Salganik
   image: /assets/images/matt.gif
-  bio: "Matthew Salganik is Professor of Sociology at Princeton University, and he serves as the Director of the Center for Information Technology Policy. He is also affiliated with several of Princeton's interdisciplinary research centers including the Office of Population Research and the Center for Statistics and Machine Learning. His research interests include social networks and computational social science. He is the author of Bit by Bit: Social Research in the Digital Age."
+  bio: "Matthew Salganik is Professor of Sociology at Princeton University, and he serves as the Director of the Center for Information Technology Policy. He is also affiliated with several of Princeton's interdisciplinary research centers including the Office of Population Research and the Center for Statistics and Machine Learning. His research interests include social networks and computational social science. He is the author of [Bit by Bit: Social Research in the Digital Age](https://www.bitbybitbook.com/)."
   website: https://www.princeton.edu/~mjs3/
 
 - name: Chris Bail
