--- a/_data/leadership.yml
+++ b/_data/leadership.yml
@@ -1,3 +1,8 @@
+- name: Jason Rhody
+  image: /assets/rhody_photo.jpg
+  bio: "Jason Rhody directs the Digital Culture program, Social Data Initiative, and the Media & Democracy program at the Social Science Research Council (SSRC).  Previously, he served as senior program officer at the National Endowment for the Humanities (NEH), where he helped create the Office of Digital Humanities (ODH). He received his PhD in English from the University of Maryland where, prior to joining NEH in 2003, he managed and advised digital humanities projects at the Maryland Institute for Technology in the Humanities (MITH) and taught courses in literature and digital media."
+
+
 - name: Carrie Hamilton
   image: /2019/hunter-nyc/images/Carrie.jpg
   bio: "Carrie Hamilton is the Administrative Director of SICSS and a program assistant for the Social Data Initiative at the Social Science Research Council. Prior to joining the SSRC, she worked as a research technician at the Center for the Study of Adolescent Risk and Resilience at Duke University. She graduated with highest honors from UNC Chapel Hill in 2017 with a BS in environmental science and geography. At UNC, she conducted independent research projects through the National Science Foundation and Ernest F. Hollings Scholarship Program and spent a year living and working in Ecuador through UNC’s Global Gap Year Fellowship."
