--- a/_data/leadership.yml
+++ b/_data/leadership.yml
@@ -1,5 +1,5 @@
 - name: Jason Rhody
-  image: /assets/rhody_photo.jpg
+  image: /assets/images/rhody_photo.jpg
   bio: "Jason Rhody directs the Digital Culture program, Social Data Initiative, and the Media & Democracy program at the Social Science Research Council (SSRC).  Previously, he served as senior program officer at the National Endowment for the Humanities (NEH), where he helped create the Office of Digital Humanities (ODH). He received his PhD in English from the University of Maryland where, prior to joining NEH in 2003, he managed and advised digital humanities projects at the Maryland Institute for Technology in the Humanities (MITH) and taught courses in literature and digital media."
 
 
