--- a/_data/2021/montreal/speakers.yml
+++ b/_data/2021/montreal/speakers.yml
@@ -1,1 +1,4 @@
-- name:
+- name: Éric Lacourse
+  image: https://github.com/compsocialscience/summer-institute/blob/master/2021/montreal/Photos/Eric_Larcoux.jpg
+  bio: "Éric Lacourse est professeur titulaire au Département de sociologie à l’Université de Montréal. Il est présentement Responsable du Baccalauréat bidisciplinaire psychologie et sociologie et anciennement directeur du Microprogramme en statistiques sociales. Il s’intéresse dernièrement à l’intégration des approches en apprentissage automatique aux données complexes. Il arbore une perspective multidisciplinaire qui intègre des concepts théoriques provenant de la psychologie développementale et de l'éducation, de la psychiatrie, de la criminologie et de la sociologie. Dans le présent projet, il offrira une expertise méthodologique dans l’analyse des données, ainsi qu’une expertise théorique sur les impacts sociaux du changement en lien avec l’identité et la personnalité."
+  website: https://recherche.umontreal.ca/nos-chercheurs/repertoire-des-professeurs/chercheur/is/in14715/
