--- a/_data/2021/princeton/faculty.yml
+++ b/_data/2021/princeton/faculty.yml
@@ -5,5 +5,5 @@
 
 - name: Chris Bail
   image: /assets/images/chris2019.jpg
-  bio: "Chris Bail is Professor of Sociology and Public Policy at Duke University where he directs the Polarization Lab. He is also affiliated with the Interdisciplinary Data Science Program, the Duke Network Analysis Center, and the Duke Population Research Institute. His research examines political polarization, culture and social psychology using tools from the  field of computational social science. He is the author of <a href="https://press.princeton.edu/books/paperback/9780691173634/terrified">Terrified: How Anti-Muslim Fringe Organizations Became Mainstream</a>.
+  bio: Chris Bail is Professor of Sociology and Public Policy at Duke University where he directs the Polarization Lab. He is also affiliated with the Interdisciplinary Data Science Program, the Duke Network Analysis Center, and the Duke Population Research Institute. His research examines political polarization, culture and social psychology using tools from the  field of computational social science. He is the author of <a href="https://press.princeton.edu/books/paperback/9780691173634/terrified">Terrified: How Anti-Muslim Fringe Organizations Became Mainstream</a>.
   website: http://www.chrisbail.net/
