--- a/_data/2021/taiwan/location.yml
+++ b/_data/2021/taiwan/location.yml
@@ -2,5 +2,5 @@ image: /assets/images/chengchi.jpg
 title: National Chengchi University, Taipei, Taiwan
 subtitle: Virtual event
 description: "June 28 to July 2, 2021"
-link: chengchi
+link: taiwan
 year: 2021
