--- a/_data/2021/taiwan/location.yml
+++ b/_data/2021/taiwan/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/chengchi.jpg
-title: National Chengchi University, Taipei, Taiwan
+title: Taipei, Taiwan (National Chengchi University)
 subtitle: Virtual event
 description: "June 28 to July 2, 2021"
 link: taiwan
