added photos for faculty
prior commit was adding names and bios for faculty

--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -2,12 +2,12 @@ faculty:
   title: Faculty
   people:
     - name: Terri Adams, Ph.D
-      image: 
+      image: /assets/images/TerriAdams.jpg
       bio: "Terri Adams, Ph.D. is a Professor in the Department of Sociology and Criminology, and Interim Director at the NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology at Howard University. She is also the lead investigator of the decision-support team for the “Building Extreme Weather Resiliency Through Improved Weather and Climate Prediction and Public Response Strategies” project supported by the National Foundation’s Partnerships in International Research and Education Program. Dr. Adams’ research takes an interdisciplinary approach to examine issues that have both theoretical and practical implications. Her specific research interests include emergency management, policing, gender studies, and the impact of trauma and disasters on individuals and organizations.  Her most recent work centers on the decision-making processes of both individuals and organizations in the face of natural disasters.  In addition to her academic work, she has served as a research consultant for a number of agencies and non-profit organizations including: The Police Executive Leadership Program at Johns Hopkins University, the Williams Institute, the DC Metropolitan Police Department, the National Organization of Black Law Enforcement Executives, the Prince George’s Center for Youth and Family Research, the Young Ladies of Tomorrow Inc., and the Fraternal Order of Police Metropolitan Police Labor Committee."      
       website: https://profiles.howard.edu/profile/41046/terri-adams
       
     - name: Bahiyyah Muhammad, Ph.D
-      image: 
+      image: /assets/images/bahiyyah_muhammad.jpg
       bio: "Dr. Bahiyyah Muhammad is an Associate Professor of Criminology in the Department of Sociology at Howard University (HU) in the District of Columbia (DC). She is an expert on mass incarceration and the collateral consequences on families, specifically focused on resilience among children of incarcerated parents.  Her recent work explores the culture among families and children who maintain bonds during long-term imprisonment and death by incarceration.  Her future research  agenda includes ethnographic methodologies to uncover the “culture of mass incarceration”."         
       website: https://gs.howard.edu/content/bahiyyah-muhammad
       
