update rutgers speakers

--- a/_data/2021/rutgers/speakers.yml
+++ b/_data/2021/rutgers/speakers.yml
@@ -3,6 +3,11 @@
   bio: "Christopher Fariss is Assistant Professor in the Department of Political Science at the University of Michigan."
   website: http://cfariss.com/
 
+- name: Daniel Nielson
+  image: /assets/images/DanNielson.jpg
+  bio: "Daniel Nielson is Professor of Government at the University of Texas at Austin."
+  website: https://danielnielson.com/
+
 - name: Zhanna Terechshenko
   image: /assets/images/terechshenkoZhanna.jpg
   bio: "Zhanna Terechshenko is a Postdoctoral Fellow at the Center for Social Media and Politics at New York University."
