update rutgers TA

--- a/_data/2021/rutgers/teaching_assistants.yml
+++ b/_data/2021/rutgers/teaching_assistants.yml
@@ -1,1 +1,5 @@
-- name:
+- name: Burcu Kolcak
+  image: /assets/images/BurcuKolcak.png
+  bio: "Burcu Kolcak is a doctoral student in the political science department at Rutgers University."
+  
+- name: More to be added soon!
