--- a/_data/2021/london/speakers.yml
+++ b/_data/2021/london/speakers.yml
@@ -11,3 +11,7 @@
   bio: "Kenneth Benoit is Professor of Computational Social Science in the Department of Methodology at the London School of Economics and Political Science, and Professor (Part-time) in the School of Politics and International Relations, Australian National University. He has previously held positions in the Department of Political Science at Trinity College Dublin and at the Central European University (Budapest). He received his Ph.D. (1998) from Harvard University, Department of Government."
   website: https://kenbenoit.net/
   
+- name: Peaks Krafft
+  image: /assets/images/PeaksKrafft.jpg
+  bio: "Dr Peaks Krafft (they/them) is Senior Lecturer and MA Internet Equalities Course Leader at the UAL Creative Computing Institute. Dr Krafft undertakes critically-oriented computer science research, academic organising, and community organising, especially recently on four issues in higher education and tech: social impacts of technology; personal and institutional accountability; anti-racism in organisations, and conflicts of interest from tech funding. Dr Krafft participates in several tech justice groups including NoTechForTyrants, United Tech and Allied Workers, and the Movement for Anti-Oppressive Computing Practices."
+  website: https://twitter.com/_pmkr
