--- a/_data/2021/beijing/speakers.yml
+++ b/_data/2021/beijing/speakers.yml
@@ -1,4 +1,4 @@
 - name: Mohsen Mosleh
-- image: MoslehM.jpg
+- image: /assets/images/MoslehM.jpg
 - bio: Mohsen Mosleh is a Lecturer (Assistant Professor) at the Science, Innovation, Technology, and Entrepreneurship Department, University of Exeter Business School and a Research Affiliate at MIT. Mohsen was a Postdoctoral Fellow at the MIT Sloan School of Management as well as the Department of Psychology at Yale University. Prior to his postdoctoral studies, Mohsen received his PhD from Stevens Institute of Technology in Systems Engineering with a minor in data science. Mohsen’s research interests lie at the intersection of computational/data science and cognitive/social science. In particular, he studies how information and misinformation spread on social media, collective decision-making, and cooperation.
 - website: http://mohsenmosleh.com/
