Fatima Alqabandi bio

--- a/_data/2021/princeton/teaching_assistants.yml
+++ b/_data/2021/princeton/teaching_assistants.yml
@@ -2,3 +2,8 @@
   image: /assets/images/EmilyCantrell.jpeg
   bio: Emily Cantrell is a doctoral student in Sociology and Social Policy at Princeton University. She received her bachelor’s degree from Denison University in 2017, where she designed her own major in Human Development and Social Policy with a focus on socioeconomic inequality in the United States. Prior to beginning her graduate work, Emily worked at Child Trends, a research organization that evaluates programs and policies to improve the lives of children and families. Her current projects include a collaboration to assess the predictability of life trajectories using thousands of machine learning strategies, building on findings from the <a href="https://www.fragilefamilieschallenge.org/">Fragile Families Challenge</a>.
   website: https://www.linkedin.com/in/emily-cantrell/
+
+- name: Fatima Alqabandi
+  image: /assets/images/FatimaAlqabandi.jpeg
+  bio: Fatima Alqabandi is a doctoral student in Sociology at Duke University. She is part of the Polarization Lab, the Duke Network Analysis Center, and, more recently, she has co-founded the Duke Computational Social Science Working Group. Her current projects include running online social experiments to explore self-censorship and political polarization, as well as using agent-based modeling to better understand the dynamics of radicalization. She hopes to continue to integrate computational methods and machine learning into social scientific research.
+  website: https://www.linkedin.com/in/fatima-alqabandi-a09a904a/
