add rutgers speaker

--- a/_data/2021/rutgers/speakers.yml
+++ b/_data/2021/rutgers/speakers.yml
@@ -8,6 +8,11 @@
   bio: "Daniel Nielson is Professor of Government at the University of Texas at Austin."
   website: https://danielnielson.com/
 
+- name: Hana Shepherd
+  bio: "Hana is Assistant Professor of Sociology at Rutgers University."
+  image: /assets/images/hanashepherd.jpg
+  website: https://sociology.rutgers.edu/people/faculty/core-department-faculty/504-shepherd-hana
+
 - name: Zhanna Terechshenko
   image: /assets/images/terechshenkoZhanna.jpg
   bio: "Zhanna Terechshenko is a Postdoctoral Fellow at the Center for Social Media and Politics at New York University."
