--- a/_data/2021/fgv-dapp-brazil/speakers.yml
+++ b/_data/2021/fgv-dapp-brazil/speakers.yml
@@ -16,25 +16,10 @@
 - name: Thiago Marzagão
   image: /assets/images/marzagao.jpg
   bio: Thiago Marzagão is a data scientist. He uses machine learning to automate the detection of corruption in the Brazilian government. He got his Ph.D. from the Ohio State University in 2014.
-  website:
- 
-- name: Cecilia Oliveira
-  image: 
-  bio:
-  website:
+  website: http://thiagomarzagao.com/
  
 - name: Ricardo Dahis
   image: /assets/images/dahis.jpg
   bio: Ricardo is a PhD candidate in Economics at Northwestern University, and co-founder of Base dos Dados. His research focuses on decentralization, public service delivery, deforestation, and racial inequality.
   website: https://www.ricardodahis.com/
- 
-- name: Tatiana Dourado
-  image: 
-  bio:
-  website:
- 
-- name: Giuliana Bianconi
-  image: 
-  bio:
-  website:
  
