--- a/_data/2021/fgv-dapp-brazil/speakers.yml
+++ b/_data/2021/fgv-dapp-brazil/speakers.yml
@@ -1,25 +1,25 @@
 - name: Patricia Rossini
   image: /assets/images/rossini.jpg
-  bio: Patricia Rossini is a Derby Fellow in the Department of Communication and Media at the University of Liverpool. Her work is primarily focused on digital threats to democracy, such as uncivil and intolerant online discourse and misinformation on social media and messaging applications. Her research has been funded by social media platforms such as WhatsApp (PI), Twitter, and Facebook (Co-PI). She is also co-PI on a Knight Foundation grant to study digital campaigns in the 2020 US election. Prior to joining the University of Liverpool, Dr. Rossini was a postdoctoral research fellow in the School of Information Studies at Syracuse University (USA). She has a Ph.D. in Communication from the Federal University of Minas Gerais, Brazil. 
+  bio: "Patricia Rossini is a Derby Fellow in the Department of Communication and Media at the University of Liverpool. Her work is primarily focused on digital threats to democracy, such as uncivil and intolerant online discourse and misinformation on social media and messaging applications. Her research has been funded by social media platforms such as WhatsApp (PI), Twitter, and Facebook (Co-PI). She is also co-PI on a Knight Foundation grant to study digital campaigns in the 2020 US election. Prior to joining the University of Liverpool, Dr. Rossini was a postdoctoral research fellow in the School of Information Studies at Syracuse University (USA). She has a Ph.D. in Communication from the Federal University of Minas Gerais, Brazil." 
   website: https://patriciarossini.com/
   
 - name: Cezar Zucco
   image: /assets/images/zucco.jpg
-  bio: Cezar Zucco is a Political Scientist and Associate Professor at FGV/EBAPE, a school of business and public administration in Rio de Janeiro. He was previously Assistant Professor at Rutgers, and has held visiting appointments at Nuffield College, Princeton, Yale, and IUPERJ (currently IESP). His work focuses on Latin American politics, and He has written on executive-legislative relations, political parties, voting behavior, and the politics of public policy.
+  bio: "Cezar Zucco is a Political Scientist and Associate Professor at FGV/EBAPE, a school of business and public administration in Rio de Janeiro. He was previously Assistant Professor at Rutgers, and has held visiting appointments at Nuffield College, Princeton, Yale, and IUPERJ (currently IESP). His work focuses on Latin American politics, and He has written on executive-legislative relations, political parties, voting behavior, and the politics of public policy."
   website: https://professor.fgv.br/ebape/cesar-zucco
   
 - name: Ernesto Calvo
   image: /assets/images/calvo.jpg
-  bio: Ernesto Calvo is Professor of Government and Politics at the University of Maryland and Director of the interdisciplinary Lab for Computational Social Science. His research focuses on the study of comparative political institutions, political representation, and social networks. He is the author of Non-Policy Politics (Cambridge U.P, 2019) with M. Victoria Murillo; Legislator Success in Fragmented Congresses in Argentina (Cambridge U.P: 2014), and over 70 publications in Latin America, Europe, and the United States.
+  bio: "Ernesto Calvo is Professor of Government and Politics at the University of Maryland and Director of the interdisciplinary Lab for Computational Social Science. His research focuses on the study of comparative political institutions, political representation, and social networks. He is the author of Non-Policy Politics (Cambridge U.P, 2019) with M. Victoria Murillo; Legislator Success in Fragmented Congresses in Argentina (Cambridge U.P: 2014), and over 70 publications in Latin America, Europe, and the United States."
   website: http://gvptsites.umd.edu/calvo/
  
 - name: Thiago Marzagão
   image: /assets/images/marzagao.jpg
-  bio: Thiago Marzagão is a data scientist. He uses machine learning to automate the detection of corruption in the Brazilian government. He got his Ph.D. from the Ohio State University in 2014.
+  bio: "Thiago Marzagão is a data scientist. He uses machine learning to automate the detection of corruption in the Brazilian government. He got his Ph.D. from the Ohio State University in 2014."
   website: http://thiagomarzagao.com/
  
 - name: Ricardo Dahis
   image: /assets/images/dahis.jpg
-  bio: Ricardo is a PhD candidate in Economics at Northwestern University, and co-founder of Base dos Dados. His research focuses on decentralization, public service delivery, deforestation, and racial inequality.
+  bio: "Ricardo is a PhD candidate in Economics at Northwestern University, and co-founder of Base dos Dados. His research focuses on decentralization, public service delivery, deforestation, and racial inequality."
   website: https://www.ricardodahis.com/
  
