--- a/_data/2021/bologna/speakers.yml
+++ b/_data/2021/bologna/speakers.yml
@@ -14,6 +14,10 @@
   bio: "Cesar A. Hidalgo directs the Center for Collective Learning at the Artificial and Natural Intelligence Institute (ANITI) at the University of Toulouse. Prior to joining ANITI, he directed the Collective Learning group at MIT. Hidalgo holds a PhD in Physics from the University of Notre Dame, and is the author of dozens of peer reviewed papers and three books. His latest book is How Humans Judge Machines (MIT Press, 2021)."
   website:
 
+- name: Ridhi Kashyap
+  bio: "Ridhi Kashyap is associate professor of social demography at the University of Oxford and professorial fellow of Nuffield College. Her research explores questions linked to demography and human development, including topics such as population health, gender inequality, partnerships and family, and migration. In her ongoing work in the the area of digital and computational demography, she is studying how technological changes linked to digitalisation affect population and human development processes, and the role of novel digital data sources for understanding population phenomena."
+  website: https://www.sociology.ox.ac.uk/people/ridhi-kashyap#tab-2366051
+  
 - name: Francesco Rampazzo
   bio: "Francesco Rampazzo is a Career Development Fellow in Marketing and Consumer Demography at the Saïd Business School, the Leverhulme Centre for Demographic Science, and Nuffield College at the University of Oxford. He is a demographer with a broad range of research interests, which include digital and computational demography with applications in fertility, migration, and survey research."
   website: https://francescorampazzo.com
