--- a/_data/2021/bologna/schedule.yml
+++ b/_data/2021/bologna/schedule.yml
@@ -103,7 +103,7 @@
 - date: 2021-07-02
   name: Invited speakers and workshop on individual projects 
   events:
-    - name: "10:00 - 12:15 tbc (*Zoom*)"
+    - name: "10:00 - 12:15 Ridhi Kashyap (*Zoom*)"
     - name: "12:30 - 13:45 Brown bag seminar: Presentations and workshopping 2 individual projects (*Zoom*)"
     - name: "14:00 - 15:00 tbc (*Zoom*)"
     - name: "14:00 - 15:00 Debriefing and Salutations (*Zoom*)"
