--- a/_data/2021/rutgers/speakers.yml
+++ b/_data/2021/rutgers/speakers.yml
@@ -9,7 +9,7 @@
   website: https://danielnielson.com/
 
 - name: Hana Shepherd
-  bio: "Hana is Assistant Professor of Sociology at Rutgers University."
+  bio: "Hana Shepherd is Assistant Professor of Sociology at Rutgers University."
   image: /assets/images/hanashepherd.jpg
   website: https://sociology.rutgers.edu/people/faculty/core-department-faculty/504-shepherd-hana
 
@@ -17,5 +17,10 @@
   image: /assets/images/terechshenkoZhanna.jpg
   bio: "Zhanna Terechshenko is a Postdoctoral Fellow at the Center for Social Media and Politics at New York University."
   website: http://zterechshenko.com/
+
+- name: Matthew Weber
+  image: /assets/images/MattWeber.png
+  bio: "Matthew Weber is Associate Professor in the Department of Communication at Rutgers University."
+  website: http://matthewsweber.com/
   
 - name: More to be added soon!
